--- a/FameTreacker/FameTreacker.iOS/Info.plist
+++ b/FameTreacker/FameTreacker.iOS/Info.plist
@@ -25,7 +25,7 @@
     <key>CFBundleDisplayName</key>
     <string>FameTreacker</string>
     <key>CFBundleIdentifier</key>
-    <string>com.companyname.FameTreacker</string>
+    <string>io.github.FameTreacker</string>
     <key>CFBundleVersion</key>
     <string>1.0</string>
     <key>UILaunchStoryboardName</key>
