--- a/FameTreacker/FameTreacker.Droid/FameTreacker.Droid.csproj
+++ b/FameTreacker/FameTreacker.Droid/FameTreacker.Droid.csproj
@@ -46,7 +46,11 @@
         <Reference Include="System.Xml" />
     </ItemGroup>
     <ItemGroup>
-        <PackageReference Include="Xamarin.Forms" Version="5.0.0.2012" />
+        <PackageReference Include="ReactiveUI" Version="17.1.50" />
+        <PackageReference Include="ReactiveUI.Events.XamForms" Version="15.1.1" />
+        <PackageReference Include="ReactiveUI.XamForms" Version="17.1.50" />
+        <PackageReference Include="Xamarin.CommunityToolkit" Version="2.0.1" />
+        <PackageReference Include="Xamarin.Forms" Version="5.0.0.2337" />
     </ItemGroup>
     <ItemGroup>
         <Compile Include="MainActivity.cs" />
@@ -64,6 +68,11 @@
         <AndroidResource Include="Resources\drawable-xhdpi\ic_launcher.png" />
         <AndroidResource Include="Resources\drawable-xxhdpi\ic_launcher.png" />
         <AndroidResource Include="Resources\drawable-xxxhdpi\ic_launcher.png" />
+        <AndroidResource Include="Resources\drawable\ic_events.xml">
+          <SubType>Designer</SubType>
+          <Generator>MSBuild:UpdateGeneratedFiles</Generator>
+        </AndroidResource>
+        <AndroidResource Include="Resources\drawable\ic_home.xml" />
         <AndroidResource Include="Resources\layout\Tabbar.axml" />
         <AndroidResource Include="Resources\layout\Toolbar.axml" />
         <AndroidResource Include="Resources\values\styles.xml" />
