--- a/FameTreacker/FameTreacker.Droid/FameTreacker.Droid.csproj
+++ b/FameTreacker/FameTreacker.Droid/FameTreacker.Droid.csproj
@@ -73,6 +73,9 @@
           <Generator>MSBuild:UpdateGeneratedFiles</Generator>
         </AndroidResource>
         <AndroidResource Include="Resources\drawable\ic_home.xml" />
+        <AndroidResource Include="Resources\drawable\ic_photos.xml" />
+        <AndroidResource Include="Resources\drawable\ic_tweets.xml" />
+        <AndroidResource Include="Resources\drawable\ic_videos.xml" />
         <AndroidResource Include="Resources\layout\Tabbar.axml" />
         <AndroidResource Include="Resources\layout\Toolbar.axml" />
         <AndroidResource Include="Resources\values\styles.xml" />
