--- a/FameTracker/FameTracker.Droid/FameTracker.Droid.csproj
+++ b/FameTracker/FameTracker.Droid/FameTracker.Droid.csproj
@@ -6,8 +6,8 @@
         <ProjectGuid>{E0A54D5C-DA48-4587-80BE-662493D2A94F}</ProjectGuid>
         <ProjectTypeGuids>{EFBA0AD7-5A72-4C68-AF49-83D382785DCF};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
         <OutputType>Library</OutputType>
-        <RootNamespace>FameTreacker.Droid</RootNamespace>
-        <AssemblyName>FameTreacker.Droid</AssemblyName>
+        <RootNamespace>FameTracker.Droid</RootNamespace>
+        <AssemblyName>FameTracker.Droid</AssemblyName>
         <AndroidApplication>True</AndroidApplication>
         <AndroidResgenFile>Resources\Resource.designer.cs</AndroidResgenFile>
         <AndroidResgenClass>Resource</AndroidResgenClass>
@@ -82,9 +82,9 @@
         <AndroidResource Include="Resources\values\colors.xml" />
     </ItemGroup>
     <ItemGroup>
-        <ProjectReference Include="..\FameTreacker\FameTreacker.csproj">
+        <ProjectReference Include="..\FameTracker\FameTracker.csproj">
             <Project>{CA14F6D4-A260-4248-95FF-B0203A1D7460}</Project>
-            <Name>FameTreacker</Name>
+            <Name>FameTracker</Name>
         </ProjectReference>
     </ItemGroup>
     <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
