--- a/FameTracker/FameTracker.Droid/Properties/AndroidManifest.xml
+++ b/FameTracker/FameTracker.Droid/Properties/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="io.github.FameTreacker">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="io.github.FameTracker">
     <uses-sdk android:minSdkVersion="21" android:targetSdkVersion="30" />
-    <application android:label="FameTreacker.Droid" android:icon="@drawable/ic_launcher" />
+    <application android:label="FameTracker.Droid" android:icon="@drawable/ic_launcher" />
 </manifest>
