--- a/FameTracker/FameTracker.iOS/Info.plist
+++ b/FameTracker/FameTracker.iOS/Info.plist
@@ -23,15 +23,15 @@
     <key>MinimumOSVersion</key>
     <string>15.0</string>
     <key>CFBundleDisplayName</key>
-    <string>FameTreacker</string>
+    <string>FameTracker</string>
     <key>CFBundleIdentifier</key>
-    <string>io.github.FameTreacker</string>
+    <string>io.github.FameTracker</string>
     <key>CFBundleVersion</key>
     <string>1.0</string>
     <key>UILaunchStoryboardName</key>
     <string>LaunchScreen</string>
     <key>CFBundleName</key>
-    <string>FameTreacker</string>
+    <string>FameTracker</string>
     <key>XSAppIconAssets</key>
     <string>Assets.xcassets/AppIcon.appiconset</string>
 </dict>
