--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -19,9 +19,8 @@ jobs:
 
       - name: Set default Xcode 12.3
         run: |
-          XCODE_ROOT=/Applications/Xcode_12.3.0.app
-          echo "MD_APPLE_SDK_ROOT=$XCODE_ROOT" >> $GITHUB_ENV
-          sudo xcode-select -s $XCODE_ROOT
+          xcode-select --install # Install Command Line Tools if you haven't already.
+          sudo xcode-select --switch /Library/Developer/CommandLineTools # Enable command line tools
 
       - name: Setup .NET Core SDK 5.0.x
         uses: actions/setup-dotnet@v1
