--- a/FameTracker/FameTracker.Droid/FameTracker.Droid.csproj
+++ b/FameTracker/FameTracker.Droid/FameTracker.Droid.csproj
@@ -17,6 +17,7 @@
         <AndroidUseLatestPlatformSdk>false</AndroidUseLatestPlatformSdk>
         <TargetFrameworkVersion>v11.0</TargetFrameworkVersion>
         <AndroidHttpClientHandlerType>Xamarin.Android.Net.AndroidClientHandler</AndroidHttpClientHandlerType>
+        <LangVersion>9</LangVersion>
     </PropertyGroup>
     <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
         <DebugSymbols>true</DebugSymbols>
@@ -39,47 +40,45 @@
         <AndroidUseSharedRuntime>false</AndroidUseSharedRuntime>
     </PropertyGroup>
     <ItemGroup>
-        <Reference Include="Mono.Android"/>
-        <Reference Include="System"/>
-        <Reference Include="System.Core"/>
-        <Reference Include="System.Xml.Linq"/>
-        <Reference Include="System.Xml"/>
+        <Reference Include="Mono.Android" />
+        <Reference Include="System" />
+        <Reference Include="System.Core" />
+        <Reference Include="System.Xml.Linq" />
+        <Reference Include="System.Xml" />
     </ItemGroup>
     <ItemGroup>
-        <PackageReference Include="ReactiveUI" Version="17.1.50"/>
-        <PackageReference Include="ReactiveUI.Events.XamForms" Version="15.1.1"/>
-        <PackageReference Include="ReactiveUI.XamForms" Version="17.1.50"/>
-        <PackageReference Include="Xamarin.CommunityToolkit" Version="2.0.1"/>
-        <PackageReference Include="Xamarin.Forms" Version="5.0.0.2337"/>
+        <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+        <PackageReference Include="Xamarin.CommunityToolkit" Version="2.0.1" />
+        <PackageReference Include="Xamarin.Forms" Version="5.0.0.2337" />
     </ItemGroup>
     <ItemGroup>
-        <Compile Include="MainActivity.cs"/>
-        <Compile Include="Resources\Resource.Designer.cs"/>
-        <Compile Include="Properties\AssemblyInfo.cs"/>
+        <Compile Include="MainActivity.cs" />
+        <Compile Include="Resources\Resource.Designer.cs" />
+        <Compile Include="Properties\AssemblyInfo.cs" />
     </ItemGroup>
     <ItemGroup>
-        <None Include="Resources\AboutResources.txt"/>
-        <None Include="Assets\AboutAssets.txt"/>
-        <None Include="Properties\AndroidManifest.xml"/>
+        <None Include="Resources\AboutResources.txt" />
+        <None Include="Assets\AboutAssets.txt" />
+        <None Include="Properties\AndroidManifest.xml" />
     </ItemGroup>
     <ItemGroup>
-        <AndroidResource Include="Resources\drawable-hdpi\ic_launcher.png"/>
-        <AndroidResource Include="Resources\drawable-mdpi\ic_launcher.png"/>
-        <AndroidResource Include="Resources\drawable-xhdpi\ic_launcher.png"/>
-        <AndroidResource Include="Resources\drawable-xxhdpi\ic_launcher.png"/>
-        <AndroidResource Include="Resources\drawable-xxxhdpi\ic_launcher.png"/>
+        <AndroidResource Include="Resources\drawable-hdpi\ic_launcher.png" />
+        <AndroidResource Include="Resources\drawable-mdpi\ic_launcher.png" />
+        <AndroidResource Include="Resources\drawable-xhdpi\ic_launcher.png" />
+        <AndroidResource Include="Resources\drawable-xxhdpi\ic_launcher.png" />
+        <AndroidResource Include="Resources\drawable-xxxhdpi\ic_launcher.png" />
         <AndroidResource Include="Resources\drawable\ic_events.xml">
             <SubType>Designer</SubType>
             <Generator>MSBuild:UpdateGeneratedFiles</Generator>
         </AndroidResource>
-        <AndroidResource Include="Resources\drawable\ic_home.xml"/>
-        <AndroidResource Include="Resources\drawable\ic_photos.xml"/>
-        <AndroidResource Include="Resources\drawable\ic_tweets.xml"/>
-        <AndroidResource Include="Resources\drawable\ic_videos.xml"/>
-        <AndroidResource Include="Resources\layout\Tabbar.axml"/>
-        <AndroidResource Include="Resources\layout\Toolbar.axml"/>
-        <AndroidResource Include="Resources\values\styles.xml"/>
-        <AndroidResource Include="Resources\values\colors.xml"/>
+        <AndroidResource Include="Resources\drawable\ic_home.xml" />
+        <AndroidResource Include="Resources\drawable\ic_photos.xml" />
+        <AndroidResource Include="Resources\drawable\ic_twitter.xml" />
+        <AndroidResource Include="Resources\drawable\ic_videos.xml" />
+        <AndroidResource Include="Resources\layout\Tabbar.axml" />
+        <AndroidResource Include="Resources\layout\Toolbar.axml" />
+        <AndroidResource Include="Resources\values\styles.xml" />
+        <AndroidResource Include="Resources\values\colors.xml" />
     </ItemGroup>
     <ItemGroup>
         <ProjectReference Include="..\FameTracker\FameTracker.csproj">
@@ -87,5 +86,5 @@
             <Name>FameTracker</Name>
         </ProjectReference>
     </ItemGroup>
-    <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets"/>
+    <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
