--- a/FameTracker/FameTracker.iOS/FameTracker.iOS.csproj
+++ b/FameTracker/FameTracker.iOS/FameTracker.iOS.csproj
@@ -12,6 +12,7 @@
         <IPhoneResourcePrefix>Resources</IPhoneResourcePrefix>
         <AssemblyName>FameTracker.iOS</AssemblyName>
         <MtouchHttpClientHandler>NSUrlSessionHandler</MtouchHttpClientHandler>
+        <LangVersion>9</LangVersion>
     </PropertyGroup>
     <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|iPhoneSimulator' ">
         <DebugSymbols>true</DebugSymbols>
@@ -87,60 +88,61 @@
         <CodesignEntitlements>Entitlements.plist</CodesignEntitlements>
     </PropertyGroup>
     <ItemGroup>
-        <Compile Include="Main.cs"/>
-        <Compile Include="AppDelegate.cs"/>
-        <None Include="Entitlements.plist"/>
-        <None Include="Info.plist"/>
-        <Compile Include="Properties\AssemblyInfo.cs"/>
-        <None Include="Resources\events.png"/>
-        <None Include="Resources\photos.png"/>
-        <None Include="Resources\tweets.svg.png"/>
-        <None Include="Resources\videos.svg.png"/>
+        <Compile Include="Main.cs" />
+        <Compile Include="AppDelegate.cs" />
+        <None Include="Entitlements.plist" />
+        <None Include="Info.plist" />
+        <Compile Include="Properties\AssemblyInfo.cs" />
+        <None Include="Resources\events.png" />
+        <None Include="Resources\home.png" />
+        <None Include="Resources\photos.png" />
+        <None Include="Resources\twitter.png" />
+        <None Include="Resources\videos.png" />
     </ItemGroup>
     <ItemGroup>
-        <InterfaceDefinition Include="Resources\LaunchScreen.storyboard"/>
-        <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\100.png"/>
-        <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\1024.png"/>
-        <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\120.png"/>
-        <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\128.png"/>
-        <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\152.png"/>
-        <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\16.png"/>
-        <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\167.png"/>
-        <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\172.png"/>
-        <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\180.png"/>
-        <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\196.png"/>
-        <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\20.png"/>
-        <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\216.png"/>
-        <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\256.png"/>
-        <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\29.png"/>
-        <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\32.png"/>
-        <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\40.png"/>
-        <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\48.png"/>
-        <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\512.png"/>
-        <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\55.png"/>
-        <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\58.png"/>
-        <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\60.png"/>
-        <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\64.png"/>
-        <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\76.png"/>
-        <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\80.png"/>
-        <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\87.png"/>
-        <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\88.png"/>
+        <InterfaceDefinition Include="Resources\LaunchScreen.storyboard" />
+        <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\100.png" />
+        <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\1024.png" />
+        <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\120.png" />
+        <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\128.png" />
+        <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\152.png" />
+        <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\16.png" />
+        <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\167.png" />
+        <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\172.png" />
+        <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\180.png" />
+        <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\196.png" />
+        <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\20.png" />
+        <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\216.png" />
+        <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\256.png" />
+        <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\29.png" />
+        <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\32.png" />
+        <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\40.png" />
+        <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\48.png" />
+        <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\512.png" />
+        <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\55.png" />
+        <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\58.png" />
+        <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\60.png" />
+        <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\64.png" />
+        <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\76.png" />
+        <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\80.png" />
+        <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\87.png" />
+        <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\88.png" />
         <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\Contents.json">
             <Visible>false</Visible>
         </ImageAsset>
     </ItemGroup>
     <ItemGroup>
-        <Reference Include="System"/>
-        <Reference Include="System.Xml"/>
-        <Reference Include="System.Core"/>
-        <Reference Include="Xamarin.iOS"/>
+        <Reference Include="System" />
+        <Reference Include="System.Xml" />
+        <Reference Include="System.Core" />
+        <Reference Include="Xamarin.iOS" />
     </ItemGroup>
     <ItemGroup>
-        <PackageReference Include="ReactiveUI" Version="17.1.50"/>
-        <PackageReference Include="ReactiveUI.Events.XamForms" Version="15.1.1"/>
-        <PackageReference Include="ReactiveUI.XamForms" Version="17.1.50"/>
-        <PackageReference Include="Xamarin.CommunityToolkit" Version="2.0.1"/>
-        <PackageReference Include="Xamarin.Forms" Version="5.0.0.2337"/>
+        <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+        <PackageReference Include="Xamarin.CommunityToolkit" Version="2.0.1" />
+        <PackageReference Include="Xamarin.FFImageLoading" Version="2.4.11.982" />
+        <PackageReference Include="Xamarin.FFImageLoading.Svg" Version="2.4.11.982" />
+        <PackageReference Include="Xamarin.Forms" Version="5.0.0.2337" />
     </ItemGroup>
     <ItemGroup>
         <ProjectReference Include="..\FameTracker\FameTracker.csproj">
@@ -148,8 +150,5 @@
             <Name>FameTracker</Name>
         </ProjectReference>
     </ItemGroup>
-    <ItemGroup>
-        <BundleResource Include="Resources\home.png"/>
-    </ItemGroup>
-    <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets"/>
+    <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
 </Project>
