--- a/FameTracker/FameTracker.Droid/FameTracker.Droid.csproj
+++ b/FameTracker/FameTracker.Droid/FameTracker.Droid.csproj
@@ -47,6 +47,7 @@
         <Reference Include="System.Xml" />
     </ItemGroup>
     <ItemGroup>
+        <PackageReference Include="LiteDB" Version="5.0.11" />
         <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
         <PackageReference Include="Xamarin.CommunityToolkit" Version="2.0.1" />
         <PackageReference Include="Xamarin.Forms" Version="5.0.0.2337" />
